@@ -2,6 +2,9 @@
  List of changes
  ---------------
 
+6/11/19
+- added support for newest clang 
+
 4/22/19
 - fixed go_root disabling packages
 - changed compilation log screen size
